DevOps/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
